--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "express": "^4.21.0",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.18.0",
+    "livereload": "^0.9.3",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
+    "connect-livereload": "^0.6.1",
     "prisma": "^5.19.1"
   }
 }
